--- a/projectEnglish.html
+++ b/projectEnglish.html
@@ -63,7 +63,7 @@
     <section class="normal">
         <div class="content">
             <h3 class="title2">ARECE</h3>
-            <p>As <strong>Vice-President of Communication and Events</strong> at the ARECE automotive association from June 2021 to May 2023, I actively contributed to the development of an autonomous single-seater software for the Formula Student international competition at Silverstone. I coordinated the association's communication activities and organized key events related to our project. This experience allowed me to develop project management, strategic communication, and event organization skills, while gaining technical expertise in autonomous vehicles.</p>
+            <p>As <strong>Vice-President of Communication and Events</strong> at the ARECE automotive association from June 2021 to May 2023, I actively contributed to the development of an autonomous single-seater software for the Formula Student international competition at Silverstone. I coordinated the association's communication activities and organized key events related to our project. This experience allowed me to develop project management, strategic communication, and event organization skills.</p>
             <p> <em>You can learn more about this project: <a href="https://arece.eu/" target="_blank">Website</a></em></p>
         </div>
         <div class="images">
@@ -79,13 +79,13 @@
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
-            <p>As <strong>Project Leader</strong>, I led a team in designing an innovative electronic locking solution for Réutec's reusable packages. Our solution, powered by a 12V AC supply and a universal plug, eliminated the need for an integrated battery. Users simply scanned the QR-CODE, obtained their code on the platform, plugged the package to the supply, and entered the code to open it. I gained valuable technical skills such as <strong>microcontroller programming</strong>, <strong>Computer-Aided Design</strong> (CAD), and <strong>electronic circuit design</strong>. I also developed project management, organization, teamwork, and time management skills.</p>
+            <p>As <strong>Project Leader</strong>, I led a team in designing an innovative electronic locking solution for Réutec's reusable packages. Our solution eliminates the need of an integrated batterypowered by adding 12V AC supply. Users simply scanned the QR-CODE, obtained their code on the platform, plugged the package to the supply, and entered the code to open it. I gained valuable technical skills such as <strong>microcontroller programming</strong>, <strong>Computer-Aided Design</strong> (CAD), and <strong>electronic circuit design</strong>. I also developed project management, organization, teamwork, and time management skills.</p>
         </div>
     </section>
     <section class="normal2">
         <div class="content">
             <h3 class="title2">REULOCK</h3>
-            <p>As <strong>Project Leader</strong>, I led a team in designing an innovative electronic locking solution for Réutec's reusable packages. Our solution, powered by a 12V AC supply and a universal plug, eliminated the need for an integrated battery. Users simply scanned the QR-CODE, obtained their code on the platform, plugged the package to the supply, and entered the code to open it. I gained valuable technical skills such as <strong>microcontroller programming</strong>, <strong>Computer-Aided Design</strong> (CAD), and <strong>electronic circuit design</strong>. I also developed project management, organization, teamwork, and time management skills.</p>
+           <p>As <strong>Project Leader</strong>, I led a team in designing an innovative electronic locking solution for Réutec's reusable packages. Our solution eliminates the need of an integrated batterypowered by adding 12V AC supply. Users simply scanned the QR-CODE, obtained their code on the platform, plugged the package to the supply, and entered the code to open it. I gained valuable technical skills such as <strong>microcontroller programming</strong>, <strong>Computer-Aided Design</strong> (CAD), and <strong>electronic circuit design</strong>. I also developed project management, organization, teamwork, and time management skills.</p>
         </div>
         <div class="images">
         <img src="./images/reulock.jpg" alt="Projects">
@@ -96,7 +96,7 @@
   <section class="normal">
       <div class="content">
           <h3 class="title2">ARES</h3>
-          <p>I mainly worked on the <strong>Artificial Intelligence</strong> part of the project in my team of 7 members. Our goal was to create a robot capable of picking up and moving cubes to specific locations. I was responsible for implementing the A* algorithm for the robot's movement. Using this algorithm, I developed an effective strategy for the robot to plan its movements and optimize cube collection in the end-of-year competition. Additionally, I contributed to other aspects of the project such as <strong>robot assembly</strong>, <strong>modeling some parts</strong>, <strong>reading received images</strong>, and <strong>communicating with the server</strong>.</p>
+          <p>I worked on the <strong>Artificial Intelligence</strong> part of the project in my team of 7 members. Our goal was to create a robot capable of picking up and moving cubes to specific locations. I was responsible for implementing the A* algorithm for the robot's movement. Using this algorithm, I developed an effective strategy for the robot to plan its movements and optimize cube collection in the end-of-year competition. Additionally, I contributed to other aspects of the project such as <strong>robot assembly</strong>, <strong>modeling some parts</strong>, <strong>reading received images</strong>, and <strong>communicating with the server</strong>.</p>
       </div>
       <div class="images">
           <img src="./images/ares.jpg" alt="Projects">
@@ -110,14 +110,14 @@
       <div class="content">
           <h3 class="title2">WULLI</h3>
           <p>
-              In my first year at ECE, I worked in a team on a project focused on future challenges. We chose to address the issue of overpackaging and developed the solution WULLI. It is an innovative application aimed at measuring the overpackaging rate of a product. Using the scan function, the application assigns an overpackaging score to the analyzed product. I actively contributed to all phases of the project, from conception to realization. This experience allowed me to develop project management, teamwork, and application development skills to address current societal needs.</p>
+              In my first year at ECE, I worked in a team on a project focused on future challenges. We chose to address the issue of overpackaging and developed the solution WULLI. It is an innovative application aimed at measuring the overpackaging rate of a product. Using the scan function, the application assigns an overpackaging score to the analyzed product. I actively contributed to all phases of the project, from conception to realization. This experience allowed me to develop project management, teamwork, and application development skills.</p>
       </div>
   </section>
    <section class="normal2">
        <div class="content">
           <h3 class="title2">WULLI</h3>
           <p>
-              In my first year at ECE, I worked in a team on a project focused on future challenges. We chose to address the issue of overpackaging and developed the solution WULLI. It is an innovative application aimed at measuring the overpackaging rate of a product. Using the scan function, the application assigns an overpackaging score to the analyzed product. I actively contributed to all phases of the project, from conception to realization. This experience allowed me to develop project management, teamwork, and application development skills to address current societal needs.</p>
+              In my first year at ECE, I worked in a team on a project focused on future challenges. We chose to address the issue of overpackaging and developed the solution WULLI. It is an innovative application aimed at measuring the overpackaging rate of a product. Using the scan function, the application assigns an overpackaging score to the analyzed product. I actively contributed to all phases of the project, from conception to realization. This experience allowed me to develop project management, teamwork, and application development skills.</p>
       </div>
       <div class="images">
           <a><img class="wulliIMG" src="./images/wulli.png" alt="Projects"></a>
@@ -138,7 +138,7 @@
               <img class="smallImg1" src="./images/drone.jpg" alt="Projects">
           </div>
           <div class="content">
-              <br><p>Our drone remote project is the result of hard work by our team of four. We designed an innovative remote that radio-controls a drone (NRF24L01) while complying with regulatory frequencies. An OLED screen displays real-time crucial information, while two joysticks ensure smooth control of altitude and direction. Thanks to our smart choice of the ATmega328P microcontroller and the integration of an inertial measurement unit, the drone benefits from exemplary stability and precision. This project reflects our passion for technological innovation and cutting-edge engineering.</p>
+              <br><p>Our drone remote project is the result of hard work by our team of four. We designed an innovative remote that radio-controls a drone (NRF24L01) while complying with regulatory frequencies. An OLED screen displays real-time crucial information, while two joysticks ensure smooth control of altitude and direction. Thanks to our smart choice of the ATmega328P microcontroller and the integration of an inertial measurement unit, the drone benefits from stability and precision.</p>
           </div>
       </div>
       <div  class="glue">
@@ -161,7 +161,7 @@
               <img class="smallImg" src="./images/alexa.jpg" alt="Projects">
           </div>
           <div class="content">
-              <p>The ALEXA project focused on digital signal processing for voice recognition. We digitized the phonatory signal and extracted voice features using the MFCC technique. The GMM model was used for speaker recognition by modeling their vocal characteristics. As a bonus, we integrated "processing" for an improved user interface. This project offered us an enriching experience in advanced speech processing and the development of engineering and programming skills.</p>
+              <p>The ALEXA project focused on digital signal processing for voice recognition. We digitized the phonatory signal and extracted voice features using the MFCC technique. This project offered me an enriching experience in advanced speech processing and the development of engineering and programming skills.</p>
           </div>
       </div>
       <div  class="glue">
@@ -179,7 +179,7 @@
               <img class="smallImg" src="./images/campusConnecte.PNG" alt="Projects">
           </div>
           <div class="content">
-              <p>The "Impulse" project, lasting for a semester, was an enriching adventure with a team of six students. We chose to reinvent education by rethinking the campus of tomorrow, following the pandemic. Our key innovation was a smart board connected to classrooms and cameras, allowing flexible and individualized learning. This approach catered to the current needs of remote learning. The project enabled us to develop skills in collaboration, research, and innovative solution design. We are proud to have contributed to shaping the future of education with our concept of the connected campus.</p>
+              <p>The "Impulse" project, lasting for a semester, was an enriching adventure with a team of six students. We chose to reinvent education by rethinking the campus of tomorrow, following the pandemic. Our key innovation was a smart board connected to classrooms and cameras, allowing flexible and individualized learning. The project enabled us to develop skills in collaboration, research, and innovative solution design.</p>
           </div>
       </div>
   </section>
@@ -207,15 +207,6 @@
             <p>My VHDL project was to create a traffic intersection using an FPGA. I successfully displayed traffic lights at all four intersections, as well as pedestrian lights. I set up a synchronous counter to generate a clock signal, slowing down the DE-10 lite signal from 50MHz to 1Hz. To inform drivers, I used a Moore machine to implement two traffic lights. As for pedestrians, I developed a system to indicate the state of the light and the remaining waiting time, displayed on a 7-segment display or through a sound effect.</p>
         </div>
     </div>
-    <div  class="glue">
-        <h3>Online POKEMON Card Game</h3>
-        <div class="images">
-            <img class="smallImg" src="./images/ecemon.png" alt="Projects">
-        </div>
-        <div class="content">
-            <p>Automobile Project ARECE: Vice-President of Communication and Prototyping at ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-    </div>
 </section>
 
 <br>
@@ -228,7 +219,7 @@
             <img class="smallImg" src="./images/projetElec1.jpg" alt="Projects">
         </div>
         <div class="content">
-            <p>In my first year during the confinement, I undertook a project to build a digital synthesizer at home. The VCO block used an NE555 to generate a rectangular signal whose frequency depended on the keyboard keys. An op-amp served as an integrator to modify the shape of the signal, and a potentiometer allowed sound sculpting. The VCF followed, modifying the output signal of the integrator using two potentiometers. Finally, the output signal was sent to the speaker to hear the synthesized sound. This project introduced me to sound synthesis and handling electronic components.</p>
+            <p>In my first year during the confinement, I undertook a project to build a digital synthesizer at home. The VCO block used an NE555 to generate a rectangular signal whose frequency depended on the keyboard keys. An op-amp served as an integrator to modify the shape of the signal, and a potentiometer allowed sound sculpting. The VCF followed, modifying the output signal of the integrator using two potentiometers. Finally, the output signal was sent to the speaker to hear the synthesized sound.</p>
         </div>
     </div>
     <div  class="glue">
@@ -237,7 +228,7 @@
             <img class="smallImg" src=./images/qwirkle.png alt="Projects">
         </div>
         <div class="content">
-            <p>My first C program was an exciting experience where, as a team of 3, we implemented the Qwirkle board game in the console. We created an interactive and functional version of the game where players could place tiles with different shapes and colors to form winning combinations. This project allowed me to acquire programming skills and become familiar with C language concepts.</p>
+            <p>My first C program was an exciting experience where, as a team of 3, we implemented the Qwirkle board game in the console. We created a version of the game where players could place tiles with different shapes and colors to form winning combinations. This project allowed me to acquire programming skills and become familiar with C language concepts.</p>
         </div>
     </div>
     <div  class="glue">
@@ -247,7 +238,7 @@
         </div>
         <br>
         <div class="content">
-            <p>My first project with Allegro graphical interface was a tower defense game titled "Street VS Healthy Food," inspired by the game Zombie VS Plant. In a team effort, we designed the graphics internally. The game, programmed in C, offers an engaging experience where players must defend their territory against waves of unhealthy enemies. The Allegro graphical interface was a crucial asset in creating attractive graphics and a smooth gaming experience. This project allowed me to develop programming skills and create an entertaining game with a user-friendly graphical interface.</p>
+            <p>My first project with Allegro graphical interface was a tower defense game titled "Street VS Healthy Food," inspired by the game Zombie VS Plant. The game, programmed in C, offers an engaging experience where players must defend their territory against waves of unhealthy enemies. The Allegro graphical interface was a crucial asset in creating attractive graphics and a smooth gaming experience. This project allowed me to develop programming skills and create an entertaining game with a user-friendly graphical interface.</p>
         </div>
     </div>
 </section>
