--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -63,7 +63,7 @@
         <div class="content">
             <h2 class= "title">Présentation</h2>
             <img id="imageAAA" class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
-            <p>Je m'appelle Adrien RAVEL. Passionné par l'électronique, je suis actuellement étudiant en M2 à l'ECE (École Centrale d'Électronique) dans la majeure des systèmes embarqués. Ma passion pour ce domaine me pousse à être motivé, créatif et à apprécier le travail en équipe pour trouver des solutions innovantes.</p>
+            <p>Je m'appelle Adrien RAVEL. Passionné par l'électronique, je suis actuellement étudiant en M2 à l'ECE (École Centrale d'Électronique) dans la majeure systèmes embarqués. Ma passion pour ce domaine me pousse à être motivé, créatif et à apprécier le travail en équipe pour trouver des solutions innovantes.</p>
             <p>Je viens de terminer un stage chez SOMFY en tant que développeur software. Ce stage m'a permis de mettre en pratique mes connaissances en programmation et de contribuer à des projets concrets. </p>
             <p>En dehors de mes études et de mon travail, le sport occupe une place importante dans ma vie. Je suis passionné de trail et je m'entraine entre 5 et 6 fois par semaine. Cette discipline exigeante me permet de me surpasser, d'améliorer mes performances et de décompresser.</p>
         </div>
@@ -87,9 +87,9 @@
         </div>
         <div class="content">
             <h2 class="texte4">Actualités : des défis sportifs sans limites</h2>
-            <p class="texte5">Dans le cadre de ma saison sportive 2022, j'ai entrepris trois grands objectifs : le Marathon de Séoul, les 60 km de Nice en courant et les 80 km de la SaintéLyon. Malheureusement, l'annulation du marathon de Séoul deux semaines avant ma participation a été un obstacle inattendu. Néanmoins, j'ai relevé avec détermination les autres défis, atteignant ainsi 2/3 de mes objectifs.</p>
+            <p class="texte5">Dans le cadre de ma saison sportive 2022, j'ai entrepris trois grands objectifs : le Marathon de Séoul, les 60 km de Nice et les 80 km de la SaintéLyon. Malheureusement, l'annulation du marathon de Séoul deux semaines avant ma participation a été un obstacle inattendu. Néanmoins, j'ai relevé avec détermination les autres défis, atteignant ainsi 2/3 de mes objectifs.</p>
             <p class="texte6">En poursuivant sur ma lancée, la saison 2023 m'a déjà réservé des moments intenses avec les 80 km de l'Écotrail de Paris, une expérience époustouflante que j'ai fièrement accomplie. </p>
-            <p class="texte7">Les prochains défis qui m'attendent sont le 10 km route de Paris, au semi-marathon de Paris, au marathon de Paris en avril 2024, et enfin au marathon pour tous des JO en juillet 2024.</p>
+            <p class="texte7">Les prochains défis qui m'attendent sont le 10 km route de Paris, le semi-marathon de Paris, le marathon de Paris en avril 2024, et enfin le marathon pour tous des JO en juillet 2024.</p>
             <p class="texte8">Cette passion pour le sport est le reflet de ma soif d'explorer de nouveaux horizons, de me dépasser et de découvrir de nouvelles sensations. Chaque défi représente pour moi une opportunité de repousser mes limites et de vivre des moments uniques.</p>
         </div>
     </section>
