--- a/formation.html
+++ b/formation.html
@@ -60,17 +60,17 @@
     <section class="normal1">
         <div class="content">
             <h2 class= "title">Formation</h2>
-            <p class="annee"><strong>2019 - 2024:</strong> Ecole ingénieur ECE - Majeure systèmes embarqués</p>
+            <p class="annee"><strong>2019 - 2024:</strong> Ecole d'ingénieur ECE - Majeure systèmes embarqués</p>
             <p class="paragraphe"><em>J'ai suivi la classe préparatoire intégrée de l'ECE qui m'a permis de me former sur les dernières nouveautés dans le domaine du numérique. Durant mon cursus, je me suis spécialisé en M1 et M2 dans la majeure systèmes embarqués. Ma formation allie la théorie à la pratique, en mettant particulièrement l'accent sur les travaux pratiques et les nombreux projets.</em></p>
             <p class="paragraphe"><em> <a href="pdf/livretPedagogiqueECE.pdf" target="_blank">Livret Pédagogique ECE</a></em></p>
             <br>
             <p class="intitule"><strong>2022:</strong> Kyungpook  National University</p>
-            <p class="paragraphe"><em>J'ai effectué un semestre à l'étranger à l'Université Nationale de Kyungpook (경북대학교) en Corée du Sud. Pendant mon échange, j'ai suivi des cours d'électronique, notamment dans les domaines de l'intelligence artificielle, les systèmes d'exploitation, la programmation réseau et le traitement du signal. J'ai eu l'opportunité d'apprendre la langue coréenne.</em></p>
+            <p class="paragraphe"><em>J'ai effectué un semestre à l'étranger à l'Université Nationale de Kyungpook (경북대학교) en Corée du Sud. Pendant mon échange, j'ai suivi des cours dans les domaines de l'intelligence artificielle, des systèmes d'exploitation, de la programmation réseau et du traitement du signal. J'ai également eu l'opportunité d'apprendre la langue coréenne.</em></p>
             <br>
             <p class="intitule"><strong>2022:</strong> Formation Handimanagement par "Companieros"</p>
-            <p class="paragraphe"><em>Grâce à cette formation, j'ai développé des compétences managériales en apprenant à encadrer et coordonner des équipes inclusives. J'ai acquis une solide capacité à diriger, à communiquer efficacement et à prendre des décisions.</em></p>
+            <p class="paragraphe"><em>Grâce à cette formation, j'ai développé des compétences managériales en apprenant à encadrer et coordonner des équipes diversifiées. J'ai acquis une solide capacité à diriger, à communiquer efficacement et à prendre des décisions.</em></p>
             <br>
-            <p class="intitule"><strong>2019:</strong> Baccalauréat S (Mention Bien)</p>
+            <p class="intitule"><strong>2019:</strong> Baccalauréat Scientifique (Mention Bien)</p>
             <p class="paragraphe"><em>J'ai obtenu mon baccalauréat scientifique au lycée, où j'ai consolidé mes connaissances dans les domaines des sciences, des mathématiques et de la physique, tout en développant ma rigueur et ma capacité d'analyse.</em></p>
         </div>
         <div class="images">
@@ -89,11 +89,11 @@
             <p class="intitule"><strong>2023:</strong> TOEIC - ETS Global</p>
             <p class="paragraphe"><em><strong>Score : 885/990 (Niveau B2).</strong> Le TOEIC - Listening and Reading Test est un test reconnu mondialement pour évaluer les compétences en compréhension orale et écrite en anglais.</em></p>
             <p class="intitule"><strong>2021:</strong> Business Game Cesim</p>
-            <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a permis de développer des compétences en gestion et de me préparer à ma future carrière. Grâce à cette expérience pratique, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs.</em></p>
+            <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a permis de développer des compétences en gestion et de préparer ma future carrière. Grâce à cette expérience, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs.</em></p>
             <p class="intitule"><strong>2020:</strong> Certification Projet Voltaire</p>
             <p class="paragraphe"><em>La certification Projet Voltaire a renforcé mes compétences en orthographe et en expression écrite pour une communication professionnelle efficace. </em></p>
             <p class="intitule" ><strong>2018:</strong> <em>Certificat de compétences de secouriste PSE1</em></p>
-            <p class="paragraphe"><em>Le PSE1 m'a permis de développer des compétences en premiers secours, notamment la réanimation, la prise en charge des blessures et des malaises. Cette certification reconnaît mes compétences en tant que secouriste et me permet d'intervenir efficacement en cas d'urgence médicale.</em></p>
+            <p class="paragraphe"><em>Le PSE1 m'a permis de développer des compétences en premiers secours, notamment la réanimation et la prise en charge des blessures et des malaises. Cette certification reconnaît mes compétences en tant que secouriste et me permet d'intervenir efficacement en cas d'urgence médicale.</em></p>
         </div>
 
     </section>
@@ -101,19 +101,19 @@
         <section class="normal2">
         <div class="content">
             <h2 class= "title">Formation</h2>
-            <p class="annee"><strong>2019 - 2024:</strong> Ecole ingénieur ECE - Majeure systèmes embarqués</p>
+            <p class="annee"><strong>2019 - 2024:</strong> Ecole d'ingénieur ECE - Majeure systèmes embarqués</p>
             <img src="images/2.png" alt="Formation" class="Image1">
             <p class="paragraphe"><em>J'ai suivi la classe préparatoire intégrée de l'ECE qui m'a permis de me former sur les dernières nouveautés dans le domaine du numérique. Durant mon cursus, je me suis spécialisé en M1 et M2 dans la majeure systèmes embarqués. Ma formation allie la théorie à la pratique, en mettant particulièrement l'accent sur les travaux pratiques et les nombreux projets.</em></p>
             <p class="paragraphe"><em> <a href="pdf/livretPedagogiqueECE.pdf" target="_blank">Livret Pédagogique ECE</a></em></p>
             <br>
             <p class="intitule"><strong>2022:</strong> Kyungpook  National University</p>
             <img src="images/1.png" alt="Formation" class="Image1">
-            <p class="paragraphe"><em>J'ai effectué un semestre à l'étranger à l'Université Nationale de Kyungpook (경북대학교) en Corée du Sud. Pendant mon échange, j'ai suivi des cours d'électronique, notamment dans les domaines de l'intelligence artificielle, les systèmes d'exploitation, la programmation réseau et le traitement du signal. J'ai eu l'opportunité d'apprendre la langue coréenne.</em></p>
+            <p class="paragraphe"><em>J'ai effectué un semestre à l'étranger à l'Université Nationale de Kyungpook (경북대학교) en Corée du Sud. Pendant mon échange, j'ai suivi des cours dans les domaines de l'intelligence artificielle, des systèmes d'exploitation, de la programmation réseau et du traitement du signal. J'ai également eu l'opportunité d'apprendre la langue coréenne.</em></p>
             <br>
             <p class="intitule"><strong>2022:</strong> Formation Handimanagement par "Companieros"</p>
-            <p class="paragraphe"><em>Grâce à cette formation, j'ai développé des compétences managériales en apprenant à encadrer et coordonner des équipes inclusives. J'ai acquis une solide capacité à diriger, à communiquer efficacement et à prendre des décisions.</em></p>
+            <p class="paragraphe"><em>Grâce à cette formation, j'ai développé des compétences managériales en apprenant à encadrer et coordonner des équipes diversifiées. J'ai acquis une solide capacité à diriger, à communiquer efficacement et à prendre des décisions.</em></p>
             <br>
-            <p class="intitule"><strong>2019:</strong> Baccalauréat S (Mention Bien)</p>
+            <p class="intitule"><strong>2019:</strong> Baccalauréat Scientifique (Mention Bien)</p>
             <p class="paragraphe"><em>J'ai obtenu mon baccalauréat scientifique au lycée, où j'ai consolidé mes connaissances dans les domaines des sciences, des mathématiques et de la physique, tout en développant ma rigueur et ma capacité d'analyse.</em></p>
              <br>
             <img src="images/3.png" alt="Formation" class="Image1">
@@ -128,7 +128,7 @@
             <p class="paragraphe"><em><strong>Score : 885/990 (Niveau B2).</strong> Le TOEIC - Listening and Reading Test est un test reconnu mondialement pour évaluer les compétences en compréhension orale et écrite en anglais.</em></p>
             <br>
             <p class="intitule"><strong>2021:</strong> Business Game Cesim</p>
-            <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a permis de développer des compétences en gestion et de me préparer à ma future carrière. Grâce à cette expérience pratique, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs.</em></p>
+            <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a permis de développer des compétences en gestion et de préparer ma future carrière. Grâce à cette expérience, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs.</em></p>
             <img src="images/4.png" alt="Formation" class="Image1">
             <br>
             <p class="intitule"><strong>2020:</strong> Certification Projet Voltaire</p>
@@ -136,8 +136,8 @@
             <p class="paragraphe"><em>La certification Projet Voltaire a renforcé mes compétences en orthographe et en expression écrite pour une communication professionnelle efficace. Grâce à cette formation, j'ai amélioré ma maîtrise du français, consolidé mes compétences rédactionnelles et obtenu une reconnaissance officielle de mes aptitudes orthographiques. Cette certification est un atout majeur pour mon parcours académique et professionnel, me démarquant en tant qu'étudiant/professionnel avec des compétences linguistiques solides et une excellente maîtrise de l'écrit.</em></p>
             <br>
             <p class="intitule" ><strong>2018:</strong> <em>Certificat de compétences de secouriste PSE1</em></p>
-            <p class="paragraphe"><em>J'ai obtenu mon baccalauréat scientifique au lycée, où j'ai consolidé mes connaissances dans les domaines des sciences, des mathématiques et de la physique, tout en développant ma rigueur et ma capacité d'analyse.</em></p>
-            <img src="images/5.png" alt="Formation" class="Image1">
+            <p class="paragraphe"><em>Le PSE1 m'a permis de développer des compétences en premiers secours, notamment la réanimation et la prise en charge des blessures et des malaises. Cette certification reconnaît mes compétences en tant que secouriste et me permet d'intervenir efficacement en cas d'urgence médicale.</em></p>
+        <img src="images/5.png" alt="Formation" class="Image1">
         </div>
     </section>
 <br><br><br>
